fix responsive breadcrumb on mobile

--- a/src/sass/global/_breadcrumb.scss
+++ b/src/sass/global/_breadcrumb.scss
@@ -4,6 +4,16 @@
 	justify-content: space-between;
 	background: $gray-200;
 	height: 40px;
+	@media (max-width: $screen-xs-min){
+		.breadcrumb{
+			width: 70%;
+			text-overflow: ellipsis;
+		}
+		.btn{
+			width: 30%;
+			text-align: center;
+		}
+	}
 }
 .breadcrumb{
 	border-radius: 0;
@@ -13,6 +23,7 @@
 		font-size: 14px;
 		@media (max-width: $screen-sm-max){
 			font-size: 12px;
+			text-overflow: ellipsis;
 		}
 	}
 	a{
